postitem spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -164,12 +164,9 @@ body {
 .cardImage {
 	width: 100%;
 	height: 100%;
-	/* height: 269px; */
 	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 	transition-property: box-shadow;
 	transition-duration: 0.2s;
-	/* height: auto; */
-	/* max-height: 10rem; */
 }
 
 .cardImage:hover {
@@ -193,6 +190,14 @@ body {
 .postHeader {
 	padding: 20px 0px;
 	border-bottom: 1px solid rgba(var(--b6a, 219, 219, 219), 1);
+}
+
+.postItemRow {
+	padding: 0px 2.5px !important;
+}
+
+.postItemCol {
+	padding: 0px 2.5px !important;
 }
 
 .postImage {
